Fixed gallery svg on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -559,6 +559,13 @@ figcaption {
   display: none;
 }
 
+.roll-btn svg {
+  display: block;
+  width: 1em;
+  height: 1em;
+  color: var(--red-dark);
+}
+
 /* Records */
 
 .record-card {
